--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,7 @@
     "SmtpPass": "7VVgpKcXqgrWaf2XKq"
   },
   "ConnectionStrings": {
-    "WebApiDatabase": "Server=localhost,1433;Database=TestDB;User=sa;Password=Pass#Word1",
+    "WebApiDatabase": "Server=localhost,1433;Database=TestJWT;User=sa;Password=Pass#Word1",
     "WebApiDatabase2": "Data Source=WebApiDatabase.db"
   },
   "Logging": {
